- Bots will now use more types of weapons.
	- Bots will now detonate the SLAM on command and will enable guiding on their RPGs on the medium and hard difficulties.
- Extra tracers no longer show up when firing the Railgun.
- Added a crosshair toggle option to the advanced multiplayer settings.
- Added gibs for dismemberment (enabled with cl_ponedm_violencelevel 2).

Beta (playtesting 03-03-21, released 03-04-21):
Mane changes:
- Changed the player spawning algorithm, enabling support for more map spawn entities from Counter-Strike Source and Day of Defeat Source.
- Added dm_aerowalk by Drift.
- Improved player customization with extra upper manes, extra lower manes, and extra tails.
- Added a 3rd color choice for extra mane and tail colors.
- Added strafe jumping.
- Added an icon.
- Added Discord Rich Presence. 
	- This can be disabled with the "Discord Rich Presence (restart to apply)" option in the multiplayer advanced menu.
- Added 2 new weapons:
	- The Gatling Gun: a high-powered minigun that allows you to clear multiple enemies in an area.
	- The Railgun: A laser sniper that fires a high-powered beam of light.
		- This weapon requires you to aim it directly on a target.
		- You can "overcharge" your ammo count by picking up multiple railguns.
- The AR2 is now known as a CBL-V2 (Combine Ball Launcher version 2)! This variant of the AR2 was built for specialized purposes and will only fire energy balls. 
	- After a small period of time, it will regenerate the energy ball, and it can be shot again. 
	- Multiple energy balls can be picked up and fired.
- Changed up the HUD.
- Added all Half-Life 2 Deathmatch maps.

Bug Fixes:
- Players will no longer collide with each other. This fixes a bug where bots couldn't get out of spawn.
- Fixed MOTDs.
- Fixed a bug where colors do not apply automatically.
- Fixed a bug where the SMG can fall through the floor.
- Fixed a bug where gore (enabled with cl_ponedm_violencelevel 2) does not play a sound.